<resources>
    <string name="app_name">Do Thing</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Login</string>
    <string name="previous">Previous</string>
    <string name="RegisterAction">Register</string>
    <string name="hello_first_fragment">Welcome</string>
    <string name="EnterUser">Username</string>
    <string name="EnterPassword">Password</string>
    <string name="hello_second_fragment">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="UserTasks">Your Tasks</string>
    <string name="add_group">Add Group</string>
    <string name="hint_group">Group Name</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Empty Name Field</string>
    <string name="EmptyList">(Empty)</string>
    <string name="hint_task">Task Name</string>
    <string name="task_add">+</string>
    <string name="invalid_login">Invalid Username/Password</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="public_ip_label">Main Server Address</string>
    <string name="public_auth_ip_label">Auth Server Address</string>
    <string name="hint_ip">IP Address</string>
    <string name="hint_port">Port</string>
    <string name="edit_new_name">New Name</string>
    <string name="more_options">…</string>
    <string name="edit_symbol">✎</string>
    <string name="Confirm">Yes</string>
    <string name="Cancel">No</string>
    <string name="Question">Are you sure you want to delete this item?</string>
    <string name="Delete">Delete</string>
    <string name="ErrorTitle">An Error Has Occurred</string>
    <string name="TryAgain">Try Again</string>
    <string name="Logout">Logout</string>
    <string name="Exit">Exit</string>
</resources>
